--- a/Resources/Prototypes/Entities/Structures/Storage/storage.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/storage.yml
@@ -1,20 +1,18 @@
 - type: entity
+  parent: BaseStructure
   id: Rack
   name: rack
   description: A rack for storing things on.
-  placement:
-    mode: SnapgridCenter
   components:
-  - type: Transform
-    anchored: true
-  - type: Clickable
+  - type: Construction
+    graph: Rack
+    node: Rack
+  - type: Anchorable
   - type: InteractionOutline
   - type: PlaceableSurface
   - type: Sprite
     sprite: Structures/Furniture/furniture.rsi
     state: rack
-  - type: Physics
-    bodyType: Static
   - type: Fixtures
     fixtures:
     - shape:
@@ -25,8 +23,6 @@
       - MobImpassable
       mask:
       - VaultImpassable
-  - type: Pullable
-  - type: Anchorable
   - type: Damageable
     damageContainer: Inorganic
     damageModifierSet: Metallic
